@@ -1,6 +1,7 @@
 - incorporate int-size patch from https://rt.cpan.org/Public/Bug/Display.html?id=80379 - thanks @sisyphus
 - incorporate Debian patches from https://rt.cpan.org/Public/Bug/Display.html?id=115393
 - fix not recognising https URLs, reported in https://rt.cpan.org/Public/Bug/Display.html?id=131169
+- get method translates _FillValue to bad with PDL_BAD enabled - Heiko Klein, Norwegian Meteorological institute, from https://rt.cpan.org/Public/Bug/Display.html?id=67776
 
 4.21 2021-05-01
 - build and metadata updates
